# EmberCtl

./: .gitignore  Cargo.toml  README.md  installer.sh  main.py  pyproject.toml
emberctl/: app.py  db.py  env.py  models.py  schema.py
emberctl/api/: auth.py  login.py
emberctl/models/: user.py
emberctl/services/: user.py
emctl-cli/: Cargo.toml
emctl-cli/src/: args.rs  main.rs
emctl-core/: Cargo.toml
emctl-core/src/: db.rs  lib.rs
